Added LocationController and MessageController relationship, endpoints for that.
